# pin-docker-digest

./: .pre-commit-config.example.yaml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.config/: .markdown-lint.yml
.github/: CONTRIBUTING.md  LICENSE  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/actions/grype/: action.yml
.github/actions/sast/: action.yml
.github/actions/sca/: action.yml
.github/actions/syft/: action.yml
.github/actions/tailscale/: action.yml
.github/workflows/: branch.yml  main.yml  pr.yml  tag.yml
src/pin_compose/: __init__.py  main.py
src/pin_dockerfile/: __init__.py  main.py
tests/: test_compose.py  test_dockerfile.py
