[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "pin-docker-digest"
version = "0.1.1"
description = "Pre-Commit hook to pin image digest to SHA in Dockerfile|Compose "
readme = "README.md"
license = "MIT"
authors = [
    { name = "irish1986" },
]
requires-python = ">=3.13"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "PyYAML>=6.0.0",
]

[project.scripts]
pin-dockerfile = "pin_dockerfile.main:main"
pin-compose = "pin_compose.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pin_dockerfile", "src/pin_compose"]


[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]


[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.1"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version",
]
