[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "pin-docker-digest"
version = "0.1.1"
description = "Pre-Commit hook to pin image digest to SHA in Dockerfile|Compose "
readme = "README.md"
license = "MIT"
authors = [
    { name = "irish1986" },
]
requires-python = ">=3.14"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "pyyaml>=6.0.3",
]

[project.scripts]
pin-dockerfile = "pin_dockerfile.main:main"
pin-compose = "pin_compose.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pin_dockerfile", "src/pin_compose"]


[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
]


[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.1"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version",
]
